--- a/GitHub/index.html
+++ b/GitHub/index.html
@@ -77,7 +77,9 @@
 
       <div class="partss">
          <div class="partss1">
+          <div data-aos="fade-right">
           <img class="too" src="./images/bcccc.webp" alt="">
+          </div>
           <h1>Web Hosting</h1>
              <p>Whether you want hosting for one or 100 websites, we’ve got plans to keep everything running in peak form.</p>
              <h3>
@@ -89,7 +91,9 @@
              </div>
          </div>
          <div class="partss1">
+           <div data-aos="fade-left">
            <img class="too" src="./images/en-img-brand-lander-professional-email.webp" alt="">
+          </div>
            <h1>Professional Email</h1>
              <p>Show customers you’re a pro with an email address that matches your domain. Get Professional Email today.</p>
              <h3>
